--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,6 +1,13 @@
 \begin{acknowledgements}
 \thispagestyle{plain}
 \setcounter{page}{2}
-%	This thesis is dedicated to my parents, Bereket Tesfaldet and Simret Tesfaldet. Your caring, loving commitment to my well-being and utmost support have taught me the value.
+First and foremost, I am grateful to my parents, Bereket and Simret Tesfaldet, for their unending commitment to my well-being and utmost support during trying moments of my research.
+
+I am thankful to my mentors and supervisors, Marcus Brubaker and Kosta Derpanis, for their support and patience in guiding me these past two years. I am also thankful for the many opportunities they have given me for engaging with the vibrant community of computer vision and deep learning researchers and practitioners. I look forward to continuing my research with them.
+
+I am grateful to Rick Wildes and Michael Brown for the many fruitful and enjoyable discussions we have had about research during my time at York University. I thank Rick for his comments and suggestions regarding the thesis manuscript.
+
 I acknowledge the financial support of the Canadian Graduate Scholarship (CGS) awarded by the Natural Sciences and Engineering Research Council of Canada (NSERC). This research was undertaken as part of the Vision: Science to Applications program, thanks in part to funding from the Canada First Research Excellence Fund.
+
+I reserve an additional, special thanks to Kosta Derpanis for his personal and academic support over the past five years, and for introducing me to the wonderful world of computer vision and deep learning. Your inspiring commitment to the success of your students, both in the classroom and in the lab, has helped this ``young padawan'' take a large step towards realizing his goals.
 \end{acknowledgements}
