--- a/fig_MSOEnet.tex
+++ b/fig_MSOEnet.tex
@@ -6,7 +6,7 @@
 \caption[Dynamics stream ConvNet]{Dynamics stream ConvNet. The ConvNet is based on a
 spacetime-oriented energy model
 \cite{derpanis2012spacetime, simoncelli1998} and is trained
-for optical flow prediction.
+for optical flow regression.
 Three scales are shown for illustration;
 in practice five scales are used.}
 \label{fig:MSOE}
