ETD-submitted version with shorter abstract and no running headers.

--- a/thesis.tex
+++ b/thesis.tex
@@ -78,14 +78,14 @@
   \addcontentsline{toc}{chapter}{#1}}
 
 % fancy page header
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\renewcommand\chaptermark[1]{\markboth{\MakeUppercase{Chapter~\thechapter: #1}}{}}
-\fancyhf{}
-\fancyhead[R]{\bfseries\leftmark}
+%\usepackage{fancyhdr}
+%\pagestyle{fancy}
+%\renewcommand\chaptermark[1]{\markboth{\MakeUppercase{Chapter~\thechapter: #1}}{}}
+%\fancyhf{}
+%\fancyhead[R]{\bfseries\leftmark}
 %\fancyhead[R]{\bfseries\thepage}
-\fancyfoot[C]{\thepage}
-\renewcommand\headrulewidth{0.4pt}% suppress the header rule
+%\fancyfoot[C]{\thepage}
+%\renewcommand\headrulewidth{0.4pt}% suppress the header rule
 
 %\setcounter{secnumdepth}{3}
 %\setcounter{tocdepth}{3}
@@ -102,7 +102,7 @@
 \pagenumbering{roman}
 \input{abstract}
 \input{acknowledgements}
-\setcounter{page}{3}
+\setcounter{page}{4}
 \onehalfspacing
 \tableofcontents
 \listoftables
