Ended up manually rotating Fig A2 in Affinity Designer.

--- a/sup_figures.tex
+++ b/sup_figures.tex
@@ -1,3 +1,9 @@
+%\storeareas\normalsetting
+%\KOMAoption{paper}{landscape}
+%\areaset{2\textwidth}{.9\textheight}
+%\recalctypearea
+%\begin{landscape}
+%\layout
 \begin{sidewaysfigure*}[t]
 	\centering
 	\begin{subfigure}[b]{\textwidth}
@@ -16,3 +22,6 @@
 	\vspace{-0.45cm}
 	\label{fig:pertexture_hist}
 \end{sidewaysfigure*}
+%\end{landscape}
+%\clearpage
+%\normalsetting
