--- a/thesis.tex
+++ b/thesis.tex
@@ -22,12 +22,12 @@
 % For appendix
 \usepackage{csvsimple}
 \usepackage{rotating}
-\usepackage{lscape}
+\usepackage{pdflscape}
 
 % If you comment hyperref and then uncomment it, you should delete
 % egpaper.aux before re-running latex.  (Or just hit 'q' on the first latex
 % run, let it finish, and you should be clear).
-\usepackage[pagebackref=true,breaklinks=true,letterpaper=true,colorlinks,bookmarks=false]{hyperref}
+\usepackage[pagebackref=true,breaklinks=true,letterpaper=true,colorlinks,hidelinks,bookmarks=false]{hyperref}
 \hypersetup{
     linkcolor = {}
 }
